change color combination

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     document.addEventListener('DOMContentLoaded', function () {
   particleground(document.getElementById('particles'), {
 
-    dotColor: 'gray',
-    lineColor: 'gray' 
+    dotColor: '#b2bec3',
+    lineColor: '#b2bec3' 
 
   });
   var intro = document.getElementById('intro');
